syntax = "proto3";

package api;

option go_package = "./api";

service Get{
    rpc Authors(GetAuthorRequest) returns (GetAuthorResponse){};
    rpc Books(GetBooksRequest) returns (GetBooksResponse){};
}


message GetBooksRequest{
    string authorName = 1;
}

message GetAuthorRequest{
    string bookName = 1;
}

message GetAuthorResponse{
    repeated string authors = 1;
}

message GetBooksResponse{
    repeated string books = 1;
}


/*

Book struct

*/
message Book{
    int32 id = 1;
    string bookname = 2;
    string author = 3;
}